k8s/pod-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devops-api
  labels:
    app: devops-api
spec:
  containers:
    - name: api
      image: ahmedmasalem/devops-dummy-api:0.1.0
      ports:
        - containerPort: 3000
