k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - devops-api.local
      secretName: devops-api-tls
  rules:
    - host: devops-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-api-service
                port:
                  number: 80
