k8s/netpol-allow-api-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-postgres
spec:
  podSelector:
    matchLabels:
      app: postgres-demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: devops-api
      ports:
        - protocol: TCP
          port: 5432

  egress:
  - to:
      - ipBlock:
          cidr: 172.20.0.1/32   # host.docker.internal's resolved IP on your machine
    ports:
      - protocol: TCP
        port: 5432
